Fix overflow mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,4 +58,8 @@ body {
   div[style*="fontSize: 56"] {
     font-size: 32px !important;
   }
+  html, body {
+  max-width: 100vw !important;
+  overflow-x: hidden !important;
+  }
 }
